--- a/saml/.env.example
+++ b/saml/.env.example
@@ -1,4 +1,4 @@
-PORT=6202
+PORT=5000
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:4000
 API_URL=http://localhost:4000/api
@@ -7,3 +7,6 @@ AUTH_URL=http://localhost:4000/auth
 SP_URL=http://localhost:5000
 HY_IDP_URL=http://localhost:7000/saml/sso
 HAKA_IDP_URL=http://localhost:7002/saml/sso
+
+HAKA_CERTIFICATE=x
+HY_CERTIFICATE=x
