--- a/helm/templates/auth/auth-service.yml
+++ b/helm/templates/auth/auth-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm.fullname" . }}-saml
+  name: {{ include "helm.fullname" . }}-auth
   labels:
-    app: {{ include "helm.fullname" . }}-saml
+    app: {{ include "helm.fullname" . }}-auth
     {{- include "helm.labels" . | nindent 4 }}
 spec:
   type: NodePort
@@ -11,5 +11,5 @@ spec:
     - port: 80
       targetPort: http
   selector:
-    app: {{ include "helm.fullname" . }}-saml
+    app: {{ include "helm.fullname" . }}-auth
     {{- include "helm.selectorLabels" . | nindent 4 }}
