--- a/auth/.env.example
+++ b/auth/.env.example
@@ -8,6 +8,11 @@ SP_URL=http://localhost:5000
 HY_IDP_URL=http://localhost:7000/saml/sso
 HAKA_IDP_URL=http://localhost:7002/saml/sso
 
+HY_METADATA_URL=https://login-test.it.helsinki.fi/metadata/sign-hy-test-metadata.xml
+HY_METADATA_CERTIFICATE_URL=https://login.helsinki.fi/metadata/sc/sign-login.helsinki.fi.crt
+HAKA_METADATA_URL=https://haka.funet.fi/metadata/haka_test_metadata_signed.xml
+HAKA_METADATA_CERTIFICATE_URL=https://wiki.eduuni.fi/download/attachments/27297785/haka_testi_2018_sha2.crt?version=1&modificationDate=1525430325823&api=v2
+
 HAKA_CERTIFICATE=x
 HY_CERTIFICATE=x
 MOOCFI_CERTIFICATE=x
