--- a/auth/package.json
+++ b/auth/package.json
@@ -17,6 +17,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.1",
     "@types/passport": "^1.0.7",
+    "@types/passport-saml-metadata": "^2.2.1",
     "@types/xml-crypto": "^1.4.2",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.13",
@@ -39,6 +40,7 @@
     "nookies": "^2.5.2",
     "passport": "^0.5.0",
     "passport-saml": "^3.2.0",
+    "passport-saml-metadata": "^2.5.0",
     "unfuck-utf8-headers-middleware": "^1.0.1",
     "xml-crypto": "^2.1.3"
   }
