--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -14,6 +14,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
+    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
     nginx.ingress.kubernetes.io/server-snippet: |
      location /ws {
         deny all;
