--- a/backend/package.json
+++ b/backend/package.json
@@ -51,10 +51,10 @@
   "license": "ISC",
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.0.3",
-    "@google-cloud/storage": "^5.15.2",
+    "@google-cloud/storage": "^5.16.1",
     "@prisma/client": "2.23.0",
-    "@sentry/integrations": "^6.13.3",
-    "@sentry/node": "^6.5.1",
+    "@sentry/integrations": "^6.16.1",
+    "@sentry/node": "^6.16.1",
     "@types/compression": "^1.7.2",
     "@types/graphql-upload": "^8.0.7",
     "@types/lodash": "^4.14.178",
@@ -66,16 +66,17 @@
     "@types/uuid": "^8.3.3",
     "@types/websocket": "^1.0.4",
     "@types/yup": "^0.29.13",
-    "apollo-server-express": "^3.4.0",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "axios": "^0.21.4",
     "compression": "^1.7.4",
-    "concurrently": "^6.3.0",
+    "concurrently": "^6.5.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
     "graphql": "^15.6.1",
-    "graphql-scalars": "^1.11.1",
+    "graphql-scalars": "^1.14.1",
     "graphql-upload": "^12.0.0",
     "helmet": "^4.6.0",
     "JSONStream": "^1.3.5",
@@ -85,10 +86,10 @@
     "micromustache": "^8.0.3",
     "mime-types": "^2.1.34",
     "morgan": "^1.10.0",
-    "newrelic": "^8.5.0",
+    "newrelic": "^8.6.0",
     "nexus": "^1.1.0",
     "nexus-plugin-prisma": "^0.35.0",
-    "node-rdkafka": "^2.11.0",
+    "node-rdkafka": "^2.12.0",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-query-stream": "^4.2.1",
@@ -102,12 +103,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/express-serve-static-core": "^4.17.26",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.3",
     "@types/mime-types": "^2.1.1",
@@ -115,17 +115,17 @@
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
     "graceful-fs": "^4.2.8",
-    "graphql-request": "^3.6.0",
-    "jest": "^27.2.5",
+    "graphql-request": "^3.7.0",
+    "jest": "^27.4.5",
     "jest-junit": "^13.0.0",
     "locate-path": "^7.0.0",
     "nanoid": "^3.1.30",
-    "nock": "^13.1.3",
+    "nock": "^13.2.1",
     "prisma": "2.23.0",
     "tmc-client-js": "0.0.9",
-    "ts-jest": "^27.0.2",
-    "ts-node": "^10.3.0",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   }
 }
