--- a/backend/package.json
+++ b/backend/package.json
@@ -125,6 +125,7 @@
     "graphql-request": "^3.7.0",
     "jest": "^27.4.5",
     "jest-junit": "^13.0.0",
+    "jest-mock": "^27.4.2",
     "locate-path": "^7.0.0",
     "nanoid": "^3.1.30",
     "nock": "^13.2.1",
