--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
     "dev": "NODE_ENV=development ts-node-dev --no-notify --respawn --files src/server.ts --transpileOnly",
@@ -14,15 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@prettier/plugin-xml": "^1.1.0",
+    "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.1",
     "@types/passport": "^1.0.7",
     "@types/passport-saml-metadata": "^2.2.1",
     "@types/xml-crypto": "^1.4.2",
     "dotenv": "^10.0.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
