--- a/auth/package.json
+++ b/auth/package.json
@@ -38,6 +38,7 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "fast-xml-parser": "^4.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "morgan": "^1.10.0",
