--- a/backend/package.json
+++ b/backend/package.json
@@ -54,31 +54,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.1.1",
+    "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
     "@google-cloud/storage": "^6.6.0",
     "@prisma/client": "2.23.0",
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
-    "@types/body-parser": "^1.19.2",
-    "@types/compression": "^1.7.2",
-    "@types/graphql-upload": "^8.0.12",
-    "@types/lodash": "^4.14.187",
-    "@types/luxon": "^3.0.2",
-    "@types/morgan": "^1.9.3",
-    "@types/nodemailer": "^6.4.6",
-    "@types/shortid": "0.0.29",
-    "@types/uuid": "^8.3.4",
-    "@types/websocket": "^1.0.5",
-    "apollo-server-core": "^3.10.4",
-    "apollo-server-express": "^3.10.4",
     "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
-    "graphql": "16.5.0",
+    "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.0",
     "graphql-upload": "^13.0.0",
     "helmet": "^6.0.0",
@@ -109,13 +100,23 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.14",
     "@types/faker": "^5.5.9",
+    "@types/graphql-upload": "^8.0.12",
     "@types/jest": "^29.2.1",
     "@types/jsonstream": "^0.8.30",
+    "@types/lodash": "^4.14.188",
+    "@types/luxon": "^3.1.0",
     "@types/mime-types": "^2.1.1",
+    "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.6",
     "@types/sharp": "^0.31.0",
+    "@types/shortid": "^0.0.29",
+    "@types/uuid": "^8.3.4",
+    "@types/websocket": "^1.0.5",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
@@ -133,8 +134,5 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
-  },
-  "overrides": {
-    "graphql": "16.5.0"
   }
 }
