--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,7 +19,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "plugins": [{ "name": "nexus/typescript-language-service" }],
-    "typeRoots": ["node_modules/@types", "static/types"]
+    "typeRoots": ["node_modules/@types", "types"]
   },
   "include": [".", "./bin/**/*", "types.d.ts"]
 }
