--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "patch-package",
     "test": "TZ=UTC jest",
     "test:ci": "TZ=UTC jest --ci --runInBand --coverage",
     "upgrade-interactive": "npx npm-check --update",
@@ -58,7 +59,7 @@
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.2.1",
     "@google-cloud/storage": "^5.19.1",
-    "@prisma/client": "2.23.0",
+    "@prisma/client": "2.23",
     "@sentry/integrations": "^6.19.6",
     "@sentry/node": "^6.19.6",
     "@types/compression": "^1.7.2",
@@ -99,6 +100,7 @@
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pg-query-stream": "^4.2.3",
+    "prisma": "^2.23.0",
     "redis": "^4.1.0",
     "sharp": "^0.30.6",
     "shortid": "^2.2.16",
@@ -128,7 +130,8 @@
     "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
     "nock": "^13.2.7",
-    "prisma": "2.23.0",
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
