--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,6 +82,7 @@
     "@graphql-codegen/client-preset-swc-plugin": "^0.2.0",
     "@graphql-codegen/fragment-matcher": "^5.0.0",
     "@graphql-codegen/time": "^5.0.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.2.6",
     "@graphql-codegen/typescript-document-nodes": "^4.0.0",
