--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
   build_frontend:
     docker:
       - image: cimg/gcp:2023.05
+    working_directory: /mnt/ramdisk
     steps:
       - checkout
       - setup_remote_docker:
@@ -76,10 +77,10 @@ jobs:
 
   prepare_backend_test:
     executor: node_postgres
-    working_directory: ~/project/backend
+    working_directory: /mnt/ramdisk/backend
     steps:
       - checkout:
-          path: ~/project
+          path: /mnt/ramdisk
       - jq/install
       - run:
           name: patch-package hash
@@ -106,7 +107,7 @@ jobs:
           paths:
             - ~/.npm
       - persist_to_workspace:
-          root: ~/project
+          root: /mnt/ramdisk
           paths:
             - .
     resource_class: large
@@ -118,10 +119,10 @@ jobs:
       RUNNING_IN_CI: "true"
       NODE_ENV: test
     parallelism: 8
-    working_directory: ~/project/backend
+    working_directory: /mnt/ramdisk/backend
     steps:
       - attach_workspace:
-          at: ~/project
+          at: /mnt/ramdisk
       # - run:
       #     name: "Install psql client"
       #     command: |
@@ -195,6 +196,7 @@ jobs:
   build_backend:
     docker:
       - image: cimg/gcp:2023.05
+    working_directory: /mnt/ramdisk
     steps:
       - checkout
       - setup_remote_docker:
@@ -301,6 +303,7 @@ jobs:
   deploy_to_production:
     docker:
       - image: cimg/gcp:2023.05
+    working_directory: /mnt/ramdisk
     steps:
       - checkout
       - setup_remote_docker:
